fixed body overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,6 @@
   background-image:url("./assets/Subtract.svg"), url("./assets/bg-main.svg");
   background-size: 100%;
   background-repeat: repeat-y;
+  width: 100vw;
+  overflow-x: hidden;
 }
